fixed  layout bug at event details and organization details page

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -138,3 +138,7 @@
     background: color-mix(in srgb, var(--border), transparent 20%);
   }
 }
+
+html {
+  scroll-behavior: smooth;
+}
